--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
-.box{width:100px;height:100px;background:#ff5722;margin:50px auto;border-radius:50%;}
-.red{background:#f44336}
-p{text-align:center;}
-
-@keyframes scaleme{0%{transform:scale(0.5)}100%{transform:scale(1.5)}}
-
-.circle{animation:scaleme 5s ease-in-out 5}
-.circle:hover{animation-play-state:paused}
+nav {
+    background: #ccc;
+    width: 200px;
+   }
+   nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+   }
+   nav ul li a {
+    display: block;
+    color: #000;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+   }
+   nav ul li a:hover {
+    background-color: #2c4584;
+    color: #fff;
+   }
+   nav ul {
+    border: 1px solid #999;
+   }
+   nav ul li {
+    border-bottom: 1px solid #999;
+   }
+   nav ul li:last-child {
+    border-bottom: none;
+   }
